# DRF-Publish

./: README.md  pyproject.toml  pytest.ini  requirements.txt
bar/: settings.py  urls.py
bar/publish/: models.py  serializers.py  tests.py  urls.py  views.py
bar/publish/migrations/: 0001_initial.py
