[tool.poetry]
name = "drf-publish"
version = "0.1.0"
description = ""
authors = ["rafaela.teixeira <rafaellynha.a@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.3.1"
attrs = "20.3.0"
Django = "3.1.6"
djangorestframework = "3.12.2"
iniconfig = "1.1.1"
packaging = "20.9"
pluggy = "0.13.1"
py = "1.10.0"
pyparsing = "2.4.7"
pytest-django = "4.1.0"
pytz = "2021.1"
sqlparse = "0.4.1"
toml = "0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
